--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "dev": "nodemon server.js"
-
     },
     "author": "",
     "license": "ISC",
     "description": "",
     "dependencies": {
+        "body-parser": "^1.19.0",
         "ejs": "^3.1.6",
         "express": "^4.17.1",
         "node": "^17.0.1",
